<resources>
    <string name="app_name">BookingCalender</string>
    <string name="ok">OK</string>
    <string name="day_count">Day count</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="select_date">Select date</string>
    <string name="clear">Clear</string>
    <string name="try_adjust">Try adjusting filters or take a look at our suggestions for places nearby!</string>
    <string name="night_count">%d Night</string>
    <string name="nights_count">Total count: %d</string>
</resources>
