<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_black"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/fullLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/crossView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/cross" />

            <TextView
                android:id="@+id/clearTopView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:text="@string/clear"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/checkInCheckOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/crossView"
                android:paddingBottom="15dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="2dp"
                        android:text="@string/check_in"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/check_in_tv"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:hint="@string/select_date"
                        android:paddingLeft="5dp"
                        android:textColor="@color/fav_toolbar_color"
                        android:textColorHint="@color/colorAccentLight"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="2dp"
                        android:text="@string/check_out"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/check_out_tv"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:hint="---"
                        android:paddingLeft="5dp"
                        android:textColor="@color/fav_toolbar_color"
                        android:textColorHint="@color/colorAccentLight"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/night_count_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkInCheckOut"
                android:text="@string/day_count"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/header"
            android:background="@color/white"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/calendar_frame"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:visibility="visible">

                <com.workfort.calender.CalendarPickerView
                    android:id="@+id/calendar_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:scrollbarStyle="outsideOverlay"
                    app:tsquare_dayBackground="@drawable/day_background"
                    app:tsquare_dayTextColor="@drawable/day_text_color"
                    app:tsquare_dividerColor="@color/transparent_black"
                    app:tsquare_headerTextColor="@color/dateTimeRangePickerHeaderTextColor"
                    app:tsquare_titleTextColor="@color/dateTimeRangePickerTitleTextColor" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="bottom|right"
                    app:backgroundTint="@color/colorAccent"
                    android:layout_margin="10dp"
                    android:onClick="onClickFabButton"
                    android:src="@android:drawable/ic_menu_today" />
            </RelativeLayout>


            <!--<android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="10dp"
                android:src="@android:drawable/ic_dialog_email" />-->

            <!--<Floatting
                android:id="@+id/searchDates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerVertical="true"
                android:background="@color/color_light_orange"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />-->
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>